quick addition to thesis. fix to svn version tagging.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -40,7 +40,7 @@ if(EXISTS ${brainid_SOURCE_DIR}/.git)
     execute_process( COMMAND git ${ARGS} OUTPUT_VARIABLE VERSION)
     string(REGEX MATCH "[0-9A-Za-z]*" VERSION ${VERSION})
 else(EXISTS ${brainid_SOURCE_DIR}/.git)
-    set(ARGS info)
+    set(ARGS info ${brainid_SOURCE_DIR})
     execute_process( COMMAND svn ${ARGS} OUTPUT_VARIABLE VERSION)
     string(REGEX MATCH "Revision: [0-9]*" VERSION2 ${VERSION})
     string(REGEX MATCH "[0-9]+" VERSION ${VERSION2})
