huge changes to dysii

--- a/testing/CMakeLists.txt
+++ b/testing/CMakeLists.txt
@@ -26,6 +26,7 @@ add_executable(dictionary dictionary.cpp)
 ADD_EXECUTABLE(segment_alltogether segment_alltogether.cpp)
 ADD_EXECUTABLE(segment_sections segment_sections.cpp)
 ADD_EXECUTABLE(segment_times segment_times.cpp)
+ADD_EXECUTABLE(resample_test resample_test.cpp)
 
 TARGET_LINK_LIBRARIES(dictionary 
     ITKAlgorithms ITKBasicFilters
@@ -41,3 +42,5 @@ TARGET_LINK_LIBRARIES(segment_alltogether ITKCommon segment ITKIO
 TARGET_LINK_LIBRARIES(segment_sections ITKCommon segment ITKIO ITKAlgorithms)
 TARGET_LINK_LIBRARIES(segment_times segment ITKAlgorithms ITKBasicFilters
     ITKCommon ITKIO)
+TARGET_LINK_LIBRARIES(resample_test mpi boost_serialization boost_mpi 
+    gslcblas gsl gfortran blas lapack dysii)
