updates to makehist, so that voxel can be selected. made change to segment so it didn't write with multiple threads

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -31,7 +31,7 @@ ADD_LIBRARY(modNiftiImageIO modNiftiImageIO.cxx)
 TARGET_LINK_LIBRARIES(modNiftiImageIO ITKIO)
 
 ADD_LIBRARY(segment segment.cpp)
-TARGET_LINK_LIBRARIES(segment ITKAlgorithms ITKBasicFilters ITKCommon gsl gslcblas tools)
+TARGET_LINK_LIBRARIES(segment ITKAlgorithms ITKBasicFilters ITKCommon gsl gslcblas tools boost_mpi mpi)
 
 ADD_LIBRARY(BoldModel BoldModel.cpp)
 
