fixed detrend_avg. simple usability changes.

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -52,6 +52,7 @@ ADD_EXECUTABLE(concatinate concat.cpp)
 ADD_EXECUTABLE(prune prune.cpp)
 ADD_EXECUTABLE(readdicom readdicom.cpp)
 ADD_EXECUTABLE(applymask applymask.cpp)
+ADD_EXECUTABLE(makeest makeest.cpp)
 ADD_EXECUTABLE(fft fft.cpp)
 ADD_EXECUTABLE(parammap_preprocess preprocess.cpp)
 ADD_EXECUTABLE(parammap_generate make_param_image.cpp)
@@ -60,6 +61,7 @@ ADD_EXECUTABLE(parammap_eval parammap_eval.cpp)
 ADD_EXECUTABLE(mse mse.cpp)
 ADD_EXECUTABLE(extract_pos extract_pos.cc)
 
+TARGET_LINK_LIBRARIES(makeest modNiftiImageIO ITKIO)
 TARGET_LINK_LIBRARIES(prune modNiftiImageIO ITKIO)
 TARGET_LINK_LIBRARIES(chop ITKBasicFilters ITKIO vullib)
 TARGET_LINK_LIBRARIES(concatinate modNiftiImageIO ITKIO)
