added a new tool to reorient an image into another images space

--- a/code/CMakeLists.txt
+++ b/code/CMakeLists.txt
@@ -52,6 +52,7 @@ ADD_EXECUTABLE(concatinate concat.cpp)
 ADD_EXECUTABLE(prune prune.cpp)
 ADD_EXECUTABLE(readdicom readdicom.cpp)
 ADD_EXECUTABLE(applymask applymask.cpp)
+ADD_EXECUTABLE(reorientby reorientby.cpp)
 ADD_EXECUTABLE(makeest makeest.cpp)
 ADD_EXECUTABLE(fft fft.cpp)
 ADD_EXECUTABLE(parammap_preprocess preprocess.cpp)
@@ -90,5 +91,6 @@ TARGET_LINK_LIBRARIES(extract_pos modNiftiImageIO ITKIO ITKCommon vullib)
 
 TARGET_LINK_LIBRARIES(readdicom modNiftiImageIO segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO vullib)
 TARGET_LINK_LIBRARIES(applymask modNiftiImageIO segment ITKAlgorithms ITKBasicFilters ITKCommon ITKIO vullib)
+TARGET_LINK_LIBRARIES(reorientby tools ITKCommon ITKIO )
 TARGET_LINK_LIBRARIES(parammap_generate gsl modNiftiImageIO segment tools ITKBasicFilters ITKCommon ITKIO 
     vullib)
